Table Cliente {
  id integer [primary key]
  nome varchar(50)
  telefone varchar(12)
  email varchar(75)
  endereco varchar(150)
}

Table Produto{
  id integer [primary key]
  marca varchar(50)
  tipo varchar(50)
  modelo varchar(50)
  numero_serie varchar(50)
  tensao_eletrica varchar(10)
}

Table Contato {
  id integer [primary key]
  telefone varchar(12)
  descricao text 
  data_hora datetime
}

Table Atendimento {
  id integer [primary key]
  id_cliente integer
  id_produto integer
  id_contato integer
}

Table Agendamento {
  id integer [primary key]
  id_atendimento integer
  data date
  periodo varchar(10)
}

Ref: Atendimento.id_cliente > Cliente.id
Ref: Atendimento.id_produto > Produto.id
Ref: Atendimento.id_contato - Contato.id
Ref: Agendamento.id_atendimento > Atendimento.id
